# HomiakFinance

./: Concurrency_Diagrams.md  Data_model  Data_model.md  LICENSE  README.md  UseCase.md  docker-compose.backend.yml  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.monitoring.yml  docker-compose.nginx.yml  docker-compose.staging.yml  docker-compose.yml  homiak-srs.md  infrastructure.md  metrics-funnels.docx  metrics-funnels.md  monitoring-alerting.md  security-model.md
backend/: .coverage  .dockerignore  .env.example  .env.staging  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/src/: .env-dev  app.py  config.py  database.py  dependencies.py  models.py  requirements.txt  security.py
backend/src/auth/: auth_router.py  auth_services.py  password_validator.py  schemas.py
backend/src/currencies/: currency_router.py
backend/src/currency/: routers.py
backend/src/for_testing/: dev_router.py
backend/src/github_oauth/: github_oauth.py
backend/src/goals/: goal_router.py  schemas.py
backend/src/google_oauth/: google_router.py
backend/src/health/: routers.py
backend/src/transactions/: currency_converter.py  schemas.py  transaction_router.py
backend/src/two_fa/: two_fa_router.py
backend/src/users/: schemas.py  users_router.py
backend/src/utils/: auth_services.py  getters_services.py  jwt_handlers.py  security.py
backend/tests/: conftest.py  test_auth.py  test_currencies.py  test_goals.py  test_integration.py  test_transactions.py  test_unit.py  test_users.py
docs/: CD_PROCESS.md  (+3 more)
(+72 files in other folders)
